--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div style="color:white">
+<div style="">
 <h1>Admin#dashboard</h1>
 <p>Find me in app/views/admin/dashboard.html.erb</p>
 <%= link_to "Sign Out" , destroy_user_session_path,method: :delete%>
