--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,33 @@
 <%# <%=image_tag("banner1", size:"auto")%>
-
+<script>
+  function increment()
+  {
+    count=parseInt(document.getElementById("count").value)
+    count=count+1
+    if(count>10)
+      count=10
+    if(count<1)
+      count=1
+    document.getElementById("count").value=count
+  }
+  function decrement()
+  {
+    count=parseInt(document.getElementById("count").value)
+    count=count-1
+    if(count>10)
+      count=10
+    if(count<1)
+      count=1
+    document.getElementById("count").value=count
+  }
+</script>
 
 <p id="notice"><%= notice %></p>
-
+<div style="padding-left:10px">
 <h1>Products</h1>
 
-<table>
-  <thead>
+<!-- <table> -->
+  <!-- <thead>
     <tr>
       <th>Brand</th>
       <th>Model</th>
@@ -14,26 +35,53 @@
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+  </thead> -->
 
-  <tbody>
+  <!-- <tbody> -->
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.brand %></td>
-        <td><%= product.model %></td>
-        <td><%= product.price %></td>
-        <td><%= product.description %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="card" style="width: 18rem;float:left;margin-left:10px;margin-bottom:15px">
+      <div class="box" style="margin-left: auto;margin-right: auto;width:100%;height:200px;background-image:url(<%=rails_blob_url(product.images[0])%>);background-size: cover;background-repeat:no-repeat;"></div>
+      <div class="card-body">
+          <h5 class="card-title"><%= product.brand %></h5>
+          <p class="card-text"><%= product.model %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+          <li class="list-group-item">₹ <%= product.price %></li>
+          <li class="list-group-item">In stocks</li>
+          <li class="list-group-item"></li>
+     </ul>
+     <!-- <div >
+       <div style="width:58%;height:100%;background:none;float:left;text-align:center"><button onclick="increment()" class="btn btn-dark">+ </button><input type="number" value=1 id="count" class="btn btn-light" style="width:65px;text-align:center" readonly/><button onclick="decrement()" class="btn btn-dark"> -</button></div>
+       <div style="width:38%;height:100%;background:none;float:left">
+         <%# <%= link_to 'Add to cart',  edit_product_path(product) ,class:"btn btn-dark",style:"width:100%;float:left"%></div> %>
+     </div> -->
+     <div class="card-body">
+       <%= link_to 'View', product ,class:"btn btn-info",style:"width:100%;float:left"%>
+     </div>
+     <% if user_signed_in? && current_user.admin?%>
+     <div class="card-body">
+       <%= link_to 'Edit',  edit_product_path(product) ,class:"btn btn-dark",style:"width:100%;float:left"%>
+     </div>
+     <div class="card-body">
+       <%= link_to 'Destroy', product ,method: :delete, data: { confirm: 'Are you sure?' },class:"btn btn-danger",style:"width:100%;float:left"%>
+     </div>
+     <%end%>
+   </div>
+
+      <!-- <tr> -->
+
+        <!-- <td>
+          <%#  %>
+        </td>
+        <td>
+          <%# <%= link_to 'Edit', edit_product_path(product) %> %>
+        </td>
+        <td>
+          <%# <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %> %>
+        </td> -->
+      <!-- </tr> -->
     <% end %>
-  </tbody>
-</table>
+  <!-- </tbody> -->
+<!-- </table> -->
 
-<br>
-
-<% if user_signed_in? && current_user.admin?%>
-<%= link_to 'New Product', new_product_path %>
-<%end%>
-<%= link_to 'login', new_user_session_path %>
+</div>
