--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,26 +1,23 @@
-<p id="notice"><%= notice %></p>
-<%(0...@product.images.count).each do |index|%>
-<%=image_tag(@product.images[index])%>
-<%end%>
-<p>
-  <strong>Brand:</strong>
-  <%= @product.brand %>
-</p>
+<br/><br/>
+<div class="box" style="margin-left:10px;float:left;background:none;width:40%;height:60vh;background-image:url(<%=rails_blob_url(@product.images[0])%>);background-size: contain;background-repeat:no-repeat;"></div>
+<!-- <div style="width:10%;height:60vh;background:blue;float:left">
+<div class="box" style="float:bottom;background:red;width:100%;height:30%;background-image:url(
+<%# <%=rails_blob_url(@product.images[1])%>);background-size: contain;background-repeat:no-repeat;"></div> %>
+<div class="box" style="float:bottom;background:red;width:100%;height:30%;background-image:url(
+<%# <%=rails_blob_url(@product.images[1])%>);background-size: contain;background-repeat:no-repeat;"></div> %>
+<div class="box" style="float:bottom;background:red;width:100%;height:30%;background-image:url(
+<%# <%=rails_blob_url(@product.images[1])%>);background-size: contain;background-repeat:no-repeat;"></div> %>
 
-<p>
-  <strong>Model:</strong>
-  <%= @product.model %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+</div> -->
+<div style="width:50%;padding-left:20px;margin-left:20px;height:60vh;background:none;float:left;border-style:solid;border-color:black;border-width:0 0 0 2px">
+<br/>
+<h2><%=@product.brand%> <%=@product.model%></h2>
+<br/>
+<h3>₹ <%=@product.price%></h3>
+<span><%=@product.description%></span><br/><br/><br/>
+ <div >
+  <div style="width:150px;height:100%;background:none;float:left;"><button onclick="increment()" class="btn btn-dark">+ </button><input type="number" value=1 id="count" class="btn btn-light" style="width:65px;text-align:center;background:black;color:white" readonly/><button onclick="decrement()" class="btn btn-dark"> -</button></div>
+  <div style="width:38%;height:100%;background:none;float:left">
+    <%= link_to 'Add to cart',  root_path ,class:"btn btn-dark",style:"width:100%;float:left"%></div>
+</div>
+</div>
