--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,6 +18,7 @@
  <div >
   <div style="width:150px;height:100%;background:none;float:left;"><button onclick="increment()" class="btn btn-dark">+ </button><input type="number" value=1 id="count" class="btn btn-light" style="width:65px;text-align:center;background:black;color:white" readonly/><button onclick="decrement()" class="btn btn-dark"> -</button></div>
   <div style="width:38%;height:100%;background:none;float:left">
-    <%= link_to 'Add to cart',  root_path ,class:"btn btn-dark",style:"width:100%;float:left"%></div>
+    <%# <%= link_to 'Add to cart',  root_path ,class:"btn btn-dark",style:"width:100%;float:left"%></div>
+    <%= button_to 'Add to Cart', line_items_path(:products_id => @product.id) %> 
 </div>
 </div>
