--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,13 +16,13 @@
         <%=  link_to "Log out", destroy_user_session_path,method: :delete,class:"nav-link"%>
         <%elsif user_signed_in?%>
         <%=  link_to "Log out", destroy_user_session_path,method: :delete,class:"nav-link"%>
-
+        <%=  link_to "Cart", line_items_path,class:"nav-link"%>
         <%else%>
         <%=  link_to "Log In", new_user_session_path,class:"nav-link"%>
         <%=  link_to "Sign Up", new_user_registration_path,class:"nav-link"%>
 
         <%end%>
-      
+
       </div>
     </div>
   </div>
