--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -2,27 +2,37 @@
 
 <h1>Line Items</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>References</th>
-      <th>References</th>
-      <th>Quantity</th>
+      <th>Product</th>
+      <th>Model</th>
+      <th>price</th>
+      <th>quantity</th>
+      <th>Item total</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+
     <% @line_items.each do |line_item| %>
       <tr>
-        <td><%= line_item.references %></td>
-        <td><%= line_item.references %></td>
+        <% p = Product.where(id: line_item.product_id).first%>
+        <%# <%=p.inspect%>
+        <td><%=p["brand"] %></td>
+        <td><%=p["model"] %></td>
+        <td><%=p["price"] %></td>
+
         <td><%= line_item.quantity %></td>
+        <td><%=p["price"]*line_item.quantity%>
         <td><%= link_to 'Show', line_item %></td>
         <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
         <td><%= link_to 'Destroy', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
     <% end %>
+<tr><td></td><td></td><td></td><th>Total</th><td><%=@line_items.first.total(@line_items)%></td></tr>
   </tbody>
 </table>
 
