--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>References:</strong>
-  <%= @line_item.references %>
+  <strong>Product:</strong>
+  <%= @line_item.product_id %>
 </p>
 
 <p>
-  <strong>References:</strong>
-  <%= @line_item.references %>
-</p>
-
-<p>
-  <strong>Quantity:</strong>
-  <%= @line_item.quantity %>
+  <strong>Cart:</strong>
+  <%= @line_item.cart_id %>
 </p>
 
 <%= link_to 'Edit', edit_line_item_path(@line_item) %> |
